# system_scripts

./: .dockerignore  .gitignore  .shellcheckrc  README.md  lnav-network-logs.sh  prune_local_branches.ps1  ruff.toml
.containers/: codeql.Dockerfile
docs/: ISSUES.md  LINT_FORMAT.md  README.md
docs/linting-formatting/: BASH.md  PYTHON.md  README.md
linux/: README.md
linux/bash/: README.md
linux/bash/automation/: README.md
linux/bash/azure/: README.md
linux/bash/docker/: show-docker-ports.sh
linux/bash/github/: README.md
linux/bash/installs/: install_lazygit.sh
linux/bash/notifications/: gotify-notification-helper.sh
linux/bash/rclone/: README.md  rclone-sync.sh
linux/bash/transmission/: .gitignore  README.md  _common.sh  add.sh  finished.sh  list.sh  move.sh  pause.sh  reannounce.sh  rm.sh  stalled.sh  start.sh  stop.sh  verify.sh
linux/motd/: README.md
python/autogit.py/: .gitignore  README.md  pyproject.toml
python/autogit.py/src/autogit/: main.py
python/autogit.py/src/autogit/core/: __init__.py  _platform.py  paths.py
python/github-asset-downloader/: README.md  example.assets.json  gh_asset_download.py
repo_scripts/: add_chmodx_to_scripts.sh  prune_local_branches.sh
repo_scripts/codeql/: format-bash.sh  format-python.sh  lint-bash.sh  lint-python.sh
repo_scripts/docker/: build-codeql.sh  run-codeql-container.sh
repo_scripts/git-bug/: pull-issues.sh  setup-bridge.sh
windows/: README.md
windows/ansible/: win10_reset_powershell_policy.ps1
windows/batch/: README.md
windows/powershell/: README.md
windows/unigetui/: README.md
(+559 files in other folders)
